--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 <body>
   <h1>Notebook Collection</h1>
   <ul>
-    <li><a href="Classifications.html">Topic 1</a></li>
+    <li><a href="./Classifications.html">Topic 1</a></li>
     <!-- Add more as needed -->
   </ul>
 </body>
