--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
-<html>
-<head><title>My Notebooks</title></head>
-<body>
-  <h1>Notebook Collection</h1>
-  <ul>
-    <li><a href="./Classifications.html">Topic 1</a></li>
-    <!-- Add more as needed -->
-  </ul>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My Notebook Showcase</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      background: radial-gradient(circle at top left, #1e3a8a, #0f172a);
+    }
+  </style>
+</head>
+<body class="text-white font-sans px-6 py-8">
+  <div class="max-w-5xl mx-auto">
+    <h1 class="text-4xl font-bold mb-8 text-center">📚 My Notebooks</h1>
+    <div id="notebook-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <!-- Cards inserted here -->
+    </div>
+  </div>
+
+  <script>
+    const notebooks = [
+      { name: "Anomaly detection", link: "Anomaly%20detection.html" },
+      { name: "CNN", link: "CNN.html" },
+      { name: "Diffusion", link: "Diffusion.html" },
+      { name: "Reinforcement learning", link: "Reinforcement%20learning.html" }
+    ];
+
+    const grid = document.getElementById('notebook-grid');
+
+    notebooks.forEach(nb => {
+      const card = document.createElement('a');
+      card.href = nb.link;
+      card.className = "block bg-white/10 hover:bg-white/20 p-6 rounded-2xl shadow-lg transition backdrop-blur";
+      card.innerHTML = `
+        <h2 class="text-xl font-semibold mb-2">${nb.name}</h2>
+        <p class="text-sm text-slate-300">View the full rendered notebook.</p>
+      `;
+      grid.appendChild(card);
+    });
+  </script>
 </body>
 </html>
