--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
   <script>
     const notebooks = [
       { name: "Anomaly detection", link: "Anomaly%20detection.html" },
+      { name: "Classifications", link: "Classifications.html" },
+      { name: "Clustering", link: "Clustering.html" },
       { name: "CNN", link: "CNN.html" },
       { name: "Diffusion", link: "Diffusion.html" },
-      { name: "Reinforcement learning", link: "Reinforcement%20learning.html" }
+      { name: "Reinforcement learning", link: "Reinforcement%20learning.html" },
+      { name: "RNN", link: "RNN.html" },
+      { name: "Transformers", link: "Transformers.html" },
+      { name: "Unsupervised learning", link: "Unsupervised%20learning.html" },
+      { name: "Supervised learning", link: "Supervised%20learning.html" },
+      { name: "Generative models", link: "Generative%20models.html" },
+      { name: "Neural networks", link: "Neural%20networks.html" }
     ];
 
     const grid = document.getElementById('notebook-grid');
