--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Science Notebook Portfolio</title>
+    <title>Machine Learning Notebooks</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -378,12 +378,11 @@
 
         <div class="relative z-10">
           <h1 class="text-4xl md:text-5xl font-bold mb-4 glow-text">
-            <span class="text-white">Data Science</span>
-            <span class="text-cyan-300">Notebook Portfolio</span>
+            <span class="text-white">Machine Learning</span>
+            <span class="text-cyan-300">Notebooks</span>
           </h1>
           <p class="text-lg text-white/90 max-w-2xl mx-auto mb-8">
-            Explore machine learning concepts through interactive Jupyter
-            notebooks
+            Learn various machine learning topics with in-depth math and explanations
           </p>
 
           <div class="flex justify-center gap-4 mb-8">
