--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             <span class="text-cyan-300">Notebooks</span>
           </h1>
           <p class="text-lg text-white/90 max-w-2xl mx-auto mb-8">
-            Learn various machine learning topics with in-depth math and explanations
+            Master key machine learning concepts from ground up, with deep mathematical rigor and clear intuitive explanations.
           </p>
 
           <div class="flex justify-center gap-4 mb-8">
@@ -428,11 +428,18 @@
               About Me
             </h2>
             <p class="text-white/90 mb-4">
-              Hello! I'm a passionate data scientist and machine learning
-              enthusiast. I created this portfolio to share practical
-              implementations of ML concepts through Jupyter notebooks. My goal
-              is to make complex topics accessible and provide clear, working
-              examples that you can experiment with.
+              Hi! I am Aaron, a 3rd year computer engineering student at University of Toronto and a machine learning enthusiast.
+              I started my machine learning journey a bit more than a year ago.
+              While I am fascinated by the power of machine learning, I also found that it is very challenging for beginners to grasp the concepts, under the intuition, and also mathematics behind the scene.
+              Despite there are infinite amount of resources available online to learn machine learning, they are often too complex or too simplified and scattered around, and lack of an unity that can take someone from zero to master.
+              As a personal experience, I often found myself lost in the sea of information, struggling to connect the dots, reading multiple articles, watching countless videos, and still not getting the full picture.
+
+              Therefore, I created this portfolio as a collection of my learning journey, where I document my understanding, including both the intuition and the mathematical details behind the scene.
+              I also believe to truly master machine learning, it is necessary to both understand the intuition and the actual theory.
+
+              My goal of this portfolio is to make complex topics accessible and provide clear, intuitive explanations for each topics, and I hope this will help you to learn machine learning in a more structured and comprehensive way, no matter your background.
+              However, the notebooks are highly theoretical, and I would recommend you practice the concepts by implementing them in code, which is the best way to solidify your understanding. Also, this is an ongoing, open-source project, and I welcome contributions from the community to help improve the notebooks and make them more comprehensive.
+              
             </p>
             <p class="text-white/90">
               I believe in learning by doing, and these notebooks are designed
