--- a/Neural network.html
+++ b/Neural network.html
@@ -15,6 +15,7 @@
     --accent: #ec4899;
     --dark: #0f172a;
     --light: #f8fafc;
+    --code-bg: rgba(15, 23, 42, 0.7); /* Dark blue background for code */
   }
 
   body {
@@ -81,79 +82,46 @@
   /* Center all images */
   img {
     display: block;
-    margin: 1.5rem auto !important;
-    max-width: 90% !important;
+    margin: 1.5rem auto;
+    max-width: 90%;
+    border-radius: 0.5rem;
   }
 
-  /* Force center images inside outputs */
-  .output img {
-    display: block !important;
-    margin-left: auto !important;
-    margin-right: auto !important;
-  }
-
-  /* CODE CELL FIXES - SPECIFIC OVERRIDES */
-  /* Dark theme for code cells */
-  .jp-Cell-inputWrapper,
-  .jp-InputArea,
-  .jp-InputArea-editor,
-  .jp-CodeMirrorEditor,
+  /* SIMPLIFIED CODE CELL STYLING */
+  /* Target only code input areas */
+  .input_area, 
   .highlight,
-  .highlight pre,
-  .highlight .c1,
-  .highlight .cm,
-  .highlight .kd,
-  .highlight .kn,
-  .highlight .o,
-  .highlight .p,
-  .highlight .nb,
-  .highlight .k,
-  .highlight .mf,
-  .highlight .mi,
-  .highlight .s,
-  .highlight .s1,
-  .highlight .s2,
-  .highlight .se,
-  .highlight .si,
-  .highlight .nt,
-  .CodeMirror,
-  .CodeMirror-code,
-  .CodeMirror-lines,
-  .cm-s-jupyter {
-    background-color: rgba(0, 0, 0, 0.3) !important;
-    color: #f8fafc !important;
-    border-radius: 0.5rem !important;
+  .jp-CodeMirrorEditor,
+  .CodeMirror {
+    background: var(--code-bg) !important;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    margin: 1rem 0;
+    border: 1px solid rgba(99, 102, 241, 0.3);
   }
 
-  /* Input prompt styling */
-  .jp-InputPrompt {
-    color: #93c5fd !important;
-    background: rgba(0, 0, 0, 0.2) !important;
-    border-radius: 0.5rem 0 0 0.5rem !important;
-    padding: 0.5rem 1rem !important;
-    min-width: 4rem !important;
-    text-align: center !important;
+  /* Style code text */
+  .input_area pre, 
+  .CodeMirror-code,
+  .highlight pre {
+    color: #f8fafc !important;
+    background: transparent !important;
+    font-family: 'Fira Code', monospace;
+    font-size: 0.95rem;
+    line-height: 1.5;
   }
 
   /* Output styling */
-  .jp-Cell-outputWrapper,
-  .jp-OutputArea,
-  .jp-OutputArea-output,
   .output_wrapper,
-  .output,
-  .output_subarea,
-  .output_text,
-  .output_stream,
-  .output_stdout,
-  .jp-RenderedText {
-    background-color: rgba(0, 0, 0, 0.3) !important;
-    color: #f8fafc !important;
-    border-radius: 0.5rem !important;
-    padding: 1rem !important;
-    margin-top: 0.5rem !important;
+  .output {
+    background: var(--code-bg) !important;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    margin: 1rem 0;
+    border: 1px solid rgba(99, 102, 241, 0.3);
   }
 
-  /* Text styling */
+  /* General text styling */
   .glass-container,
   .glass-container h1,
   .glass-container h2,
@@ -162,77 +130,41 @@
   .glass-container h5,
   .glass-container h6,
   .glass-container p,
-  .glass-container div,
-  .jp-RenderedHTMLCommon,
-  .jp-RenderedMarkdown {
-    color: #f8fafc !important;
-  }
-
-  /* Tables */
-  .glass-container table {
-    background: rgba(0, 0, 0, 0.3) !important;
-    color: white !important;
-    border-collapse: collapse !important;
-    width: 100% !important;
-    margin: 1rem 0 !important;
-  }
-
-  .glass-container th, .glass-container td {
-    border: 1px solid rgba(255, 255, 255, 0.1) !important;
-    padding: 0.5rem !important;
-    text-align: left !important;
+  .glass-container div {
+    color: #f8fafc;
   }
 
   /* Links */
   .glass-container a {
-    color: #93c5fd !important;
-    text-decoration: none !important;
+    color: #93c5fd;
+    text-decoration: none;
   }
 
   .glass-container a:hover {
-    color: #bfdbfe !important;
-    text-decoration: underline !important;
-  }
-
-  /* Code blocks */
-  .highlight {
-    margin: 1.5rem 0 !important;
-    padding: 1rem !important;
-    overflow: auto !important;
+    color: #bfdbfe;
+    text-decoration: underline;
   }
 
   /* Remove all white backgrounds */
-  body,
-  .jp-Notebook,
-  .jp-Cell,
-  .jp-Cell-inputWrapper,
-  .jp-Cell-outputWrapper,
-  .jp-InputArea,
-  .jp-OutputArea,
   .jp-RenderedHTMLCommon,
-  .jp-RenderedMarkdown,
-  .jp-mod-presentationMode,
-  .jp-InputArea-editor,
-  .jp-CodeMirrorEditor {
+  .jp-InputArea,
+  .jp-Cell-inputWrapper,
+  .jp-Cell-outputWrapper {
     background: transparent !important;
-    color: #f8fafc !important;
   }
 
-  /* Fix spacing */
+  /* Cell spacing */
   .jp-Cell {
-    margin-bottom: 2rem !important;
-    padding: 1rem !important;
-    background: rgba(0, 0, 0, 0.2) !important;
-    border-radius: 0.5rem !important;
+    margin-bottom: 2rem;
+    background: transparent !important;
   }
 
-  /* Force dark theme syntax highlighting */
-  .cm-s-jupyter span.cm-keyword { color: #f92672 !important; }
-  .cm-s-jupyter span.cm-number { color: #ae81ff !important; }
-  .cm-s-jupyter span.cm-string { color: #a6e22e !important; }
-  .cm-s-jupyter span.cm-comment { color: #75715e !important; }
-  .cm-s-jupyter span.cm-builtin { color: #66d9ef !important; }
-  .cm-s-jupyter span.cm-variable { color: #f8f8f2 !important; }
+  /* Input prompt styling */
+  .jp-InputPrompt {
+    color: #93c5fd !important;
+    background: transparent !important;
+    padding-right: 1rem;
+  }
 </style>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -7761,7 +7693,7 @@ a.anchor-link {
 </ul>
 <p>Each layer is performing "feature engineering" to create some new features based on the input that allows the model to make better predictions. This process is automatic.</p>
 <h2 id="Activation-function">Activation function<a class="anchor-link" href="#Activation-function">¶</a></h2><p>The activation function normalizes the weights, it can be a linear regression model, logistic regression model, or other functions.</p>
-<img alt="No description has been provided for this image" src="https://miro.medium.com/v2/resize:fit:1358/1*Gh5PS4R_A5drl5ebd_gNrg@2x.png" width="500"/  style="display: block; margin: 1.5rem auto; max-width: 90%;">
+<img alt="No description has been provided for this image" src="https://miro.medium.com/v2/resize:fit:1358/1*Gh5PS4R_A5drl5ebd_gNrg@2x.png" width="500"/ style="display: block; margin: 1.5rem auto; max-width: 90%; border-radius: 0.5rem;">
 <h2 id="Notations">Notations<a class="anchor-link" href="#Notations">¶</a></h2><p>$n^{[l]}$: number of neurons in the $l$th layer</p>
 <p>$\vec w^{[l]}_j$, $b^{[l]}_j$: the weights and bias of the $j$th neuron in $l$th layer</p>
 <p>$\vec a^{[l]}$: the output vector for $l$th layer and input for $l + 1$th layer</p>
@@ -8690,7 +8622,7 @@ Since $g(z) = z$, this is equivalent to no activation function</p>
 <p>Derivatives
 $$\frac{\partial g(z)}{\partial z} = \frac{1}{1 + e^{-z}}  (1 - \frac{1}{1 + e^{-z}}) = g(z) (1-g(z))$$</p>
 <h2 id="Tanh">Tanh<a class="anchor-link" href="#Tanh">¶</a></h2><p>$$g(z) = \frac{e^z - e^{-z}}{e^z + e^{-z}}$$
-<img alt="No description has been provided for this image" src="https://vidyasheela.com/web-contents/img/post_img/39/tanh%20activation%20function-new.png" width="500"/  style="display: block; margin: 1.5rem auto; max-width: 90%;"></p>
+<img alt="No description has been provided for this image" src="https://vidyasheela.com/web-contents/img/post_img/39/tanh%20activation%20function-new.png" width="500"/ style="display: block; margin: 1.5rem auto; max-width: 90%; border-radius: 0.5rem;"></p>
 <p>Derivatives
 $$\frac{\partial g(z)}{\partial z} = 1 - (tanh(z))^2 = 1 - g(z)^2$$</p>
 <h2 id="ReLU">ReLU<a class="anchor-link" href="#ReLU">¶</a></h2><p>$$g(z) =  \begin{cases}
@@ -8698,7 +8630,7 @@ $$\frac{\partial g(z)}{\partial z} = 1 - (tanh(z))^2 = 1 - g(z)^2$$</p>
 max(0, z) &amp; \text{if $z \geq 0$}\\
 \end{cases}
 $$
-<img alt="No description has been provided for this image" src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*DfMRHwxY1gyyDmrIAd-gjQ.png" width="500"/  style="display: block; margin: 1.5rem auto; max-width: 90%;"></p>
+<img alt="No description has been provided for this image" src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*DfMRHwxY1gyyDmrIAd-gjQ.png" width="500"/ style="display: block; margin: 1.5rem auto; max-width: 90%; border-radius: 0.5rem;"></p>
 <p>ReLU has the ability to deactivate a function when $z &lt; 0$, so we can use ReLU to build more complex, piecewise functions for decision boundaries</p>
 <p>Derivatives
 $$\frac{\partial g(z)}{\partial z} = \begin{cases}
@@ -8712,7 +8644,7 @@ max(0, z) &amp; \text{if $z \geq 0$}\\
 \end{cases}
 $$
 where $a$ is a very small positive number</p>
-<img alt="No description has been provided for this image" src="https://production-media.paperswithcode.com/methods/Screen_Shot_2020-05-25_at_3.09.45_PM.png" width="400"/  style="display: block; margin: 1.5rem auto; max-width: 90%;">
+<img alt="No description has been provided for this image" src="https://production-media.paperswithcode.com/methods/Screen_Shot_2020-05-25_at_3.09.45_PM.png" width="400"/ style="display: block; margin: 1.5rem auto; max-width: 90%; border-radius: 0.5rem;">
 <p>Derivatives
 $$\frac{\partial g(z)}{\partial z} = \begin{cases}
 a &amp; \text{if $z&lt;0$}\\
@@ -8735,7 +8667,7 @@ $$</p>
 <h2 id="Vanishing/Exploding-gradient">Vanishing/Exploding gradient<a class="anchor-link" href="#Vanishing/Exploding-gradient">¶</a></h2><p>When a neural netowrk is very deep, the coefficient for the function of the output can grow or diminish exponentially. This can cause gradient descent to have a very larger or small slope to each iteration, which is not ideal</p>
 <p>As a partial solution, we can set the the variance of each weight matrix $W^{[l]}$ equals to one when performing random initialization to reduce the speed of vanishing or exploding gradient. This method is called Xavier initialization</p>
 <h1 id="Mean-normalization">Mean normalization<a class="anchor-link" href="#Mean-normalization">¶</a></h1><p>Normalizing input data ensures the all the feature values are in similar ranges, so the gradient descent can run faster</p>
-<img alt="No description has been provided for this image" src="https://miro.medium.com/v2/resize:fit:992/format:webp/1*DK6tNx7Ke_27-CdLT3_1Ug.png"/  style="display: block; margin: 1.5rem auto; max-width: 90%;">
+<img alt="No description has been provided for this image" src="https://miro.medium.com/v2/resize:fit:992/format:webp/1*DK6tNx7Ke_27-CdLT3_1Ug.png"/ style="display: block; margin: 1.5rem auto; max-width: 90%; border-radius: 0.5rem;">
 <p>Ensures the validation ans test set are included during the normalization so the mean and variance used is the same as the training set</p>
 </div>
 </div>
