--- a/index.html
+++ b/index.html
@@ -382,7 +382,8 @@
             <span class="text-cyan-300">Notebooks</span>
           </h1>
           <p class="text-lg text-white/90 max-w-2xl mx-auto mb-8">
-            Master key machine learning concepts from ground up, with deep mathematical rigor and clear intuitive explanations.
+            Master key machine learning concepts from ground up, with deep
+            mathematical rigor and clear intuitive explanations.
           </p>
 
           <div class="flex justify-center gap-4 mb-8">
@@ -428,24 +429,36 @@
               About Me
             </h2>
             <p class="text-white/90 mb-4">
-              Hi! I am Aaron, a 3rd year computer engineering student at University of Toronto and a machine learning enthusiast.
-              I started my machine learning journey a bit more than a year ago.
-              While I am fascinated by the power of machine learning, I also found that it is very challenging for beginners to grasp the concepts, under the intuition, and also mathematics behind the scene.
-              Despite there are infinite amount of resources available online to learn machine learning, they are often too complex or too simplified and scattered around, and lack of an unity that can take someone from zero to master.
-              As a personal experience, I often found myself lost in the sea of information, struggling to connect the dots, reading multiple articles, watching countless videos, and still not getting the full picture.
-
-              Therefore, I created this portfolio as a collection of my learning journey, where I document my understanding, including both the intuition and the mathematical details behind the scene.
-              I also believe to truly master machine learning, it is necessary to both understand the intuition and the actual theory.
-
-              My goal of this portfolio is to make complex topics accessible and provide clear, intuitive explanations for each topics, and I hope this will help you to learn machine learning in a more structured and comprehensive way, no matter your background.
-              However, the notebooks are highly theoretical, and I would recommend you practice the concepts by implementing them in code, which is the best way to solidify your understanding. Also, this is an ongoing, open-source project, and I welcome contributions from the community to help improve the notebooks and make them more comprehensive.
-              
+              Hi, I'm Aaron, a ML enthusiast. I began my ML journey a year ago.
+              While I was immediately captivated by its power, I also realized
+              how difficult it is for beginners to truly grasp the concepts,
+              especially the underlying intuition and mathematical foundations.
+              Despite the abundance of resources, many are overly complex,
+              overly simplistic, or scattered across different platforms, and a
+              unified, structured path that can guide someone from the ground up
+              to mastery is often missing.
             </p>
-            <p class="text-white/90">
-              I believe in learning by doing, and these notebooks are designed
-              to help you understand both the theory and practical
-              implementation of various machine learning algorithms. Feel free
-              to explore and use these resources in your own learning journey!
+            <p class="text-white/90 mb-4">
+              That's why I created this portfolio: as a curated record of my
+              learning to break down ML topics with both intuitive insights and
+              in-depth mathematical explanations. I believe to truly master ML,
+              one needs to understand not just how things work, but why they
+              work from both a intuitional and theoretical lens. My goal is to
+              make complex topics more accessible with clear, structured, and
+              intuitive explanations. These notebooks will help you build a
+              strong foundation, but they are theory-heavy, which requires
+              strong mathematical backgrounds. Beyond that, I highly encourage
+              implementing the ideas to deepen your understanding. This is an
+              ongoing, open-source project, and I welcome contributions from
+              anyone to help expand and refine these resources. I hope this
+              portfolio serves as a helpful companion on your journey.
+            </p>
+            <p class="text-white/90 mb-4">
+              Note: These notebooks haven't been professionally reviewed, so
+              errors may be present. Please read them with a critical eye. I'm
+              continuously learning and welcome any feedback or suggestions. If
+              you spot a mistake or have ideas for new content, feel free to
+              reach out or contribute via GitHub.
             </p>
           </div>
         </div>
@@ -606,7 +619,7 @@
         },
         {
           name: "Concepts & Guilds",
-          link: "Concepts%20&%20guilds.html",
+          link: "Concepts%20&%20guild.html",
           category: "general",
           icon: "fas fa-book",
           tags: ["concepts", "ml-cycles", "feature-engineering"],
@@ -630,7 +643,7 @@
         },
         {
           name: "Principal Component Analysis",
-          link: "Principal%20component%20analysis.html",
+          link: "Principal%20components%20analysis.html",
           category: "unsupervised",
           icon: "fas fa-compress",
           tags: ["PCA", "dimensionality", "feature-reduction"],
