--- a/index.html
+++ b/index.html
@@ -553,32 +553,20 @@
       <footer class="mt-16 pt-8 pb-12 border-t border-white/10 text-center">
         <div class="flex justify-center space-x-6 mb-6">
           <a
-            href="#"
+            href="https://github.com/guaaaaa"
             class="text-white/70 hover:text-white transition transform hover:scale-125"
           >
             <i class="fab fa-github text-xl"></i>
           </a>
           <a
-            href="#"
+            href="https://www.linkedin.com/in/aaron-gu-a3865823a/"
             class="text-white/70 hover:text-white transition transform hover:scale-125"
           >
             <i class="fab fa-linkedin text-xl"></i>
           </a>
-          <a
-            href="#"
-            class="text-white/70 hover:text-white transition transform hover:scale-125"
-          >
-            <i class="fab fa-twitter text-xl"></i>
-          </a>
-          <a
-            href="#"
-            class="text-white/70 hover:text-white transition transform hover:scale-125"
-          >
-            <i class="fab fa-kaggle text-xl"></i>
-          </a>
         </div>
         <p class="text-white/60">
-          © 2023 Data Science Notebook Portfolio. All rights reserved.
+          © 2025 Machine Learning Notebooks. All rights reserved.
         </p>
       </footer>
     </div>
@@ -619,7 +607,7 @@
         },
         {
           name: "Concepts & Guilds",
-          link: "Concepts%20&%20guild.html",
+          link: "Concepts%20&%20Guild.html",
           category: "general",
           icon: "fas fa-book",
           tags: ["concepts", "ml-cycles", "feature-engineering"],
